--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,15 @@
             "email": "APISupport@mastercard.com"
         }
     ],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/muhamed-didovic/sdk-core-php"
+        }
+    ],
     "require": {
         "guzzlehttp/guzzle": "^6.1",
-        "monolog/monolog": "^1.19"
+        "monolog/monolog": "^2.1"
     },
     "require-dev": {
 	"phpunit/phpunit": "^5.7"
